--- a/src/tag.scss
+++ b/src/tag.scss
@@ -56,3 +56,15 @@
 .el-select__tags {
   left: 4px;
 }
+
+
+.el-tag--mini {
+  margin-bottom: 4px;
+  margin-right: 4px;
+  padding: 0 4px;
+  height: 18px;
+  line-height: 1.5;
+  background: #E6F0FF;
+  border-radius: 2px;
+  border: 0;
+}
