--- a/src/drawer.scss
+++ b/src/drawer.scss
@@ -3,14 +3,27 @@
 }
 
 .el-drawer__header {
-  margin-bottom: 40px;
-  padding: 40px 40px 0;
+  position: relative;
+  margin-bottom: 16px;
+  padding: 0 24px;
 
   & > :first-child {
-    line-height: 36px;
-    font-size: 24px;
+    line-height: 48px;
     color: #333;
+    font-weight: 600;
     outline: none;
+    box-shadow: inset 0 -1px 0 #DDD;
+  }
+
+  .el-drawer__close-btn {
+    position: absolute;
+    right: 24px;
+    top: (48px - 16px) / 2;
+    font-size: 0; // 消除内嵌 iconfont 的 inline-block 元素 i 标签带来的高度不匹配
+  }
+
+  .el-dialog__close {
+    font-size: 16px;
   }
 }
 
@@ -24,14 +37,14 @@
 
 .sd-drawer__content {
   flex: 1;
-  padding: 0 40px;
+  padding: 0 24px;
   overflow-y: auto;
 }
 
 .sd-drawer__footer {
   position: relative;
   padding: 16px 24px;
-  height: 48px;
+  height: 32px;
   background: #FFFFFF;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, .16);
 
