--- a/src/form.scss
+++ b/src/form.scss
@@ -114,16 +114,28 @@
     align-items: center;
     white-space: normal;
     margin-right: 0;
-    padding: 8px 16px;
+    padding: 8px 12px;
     box-shadow: inset 0 -1px 0 0 #EEE;
 
+    &:nth-child(even) {
+      background: #FAFAFA;
+    }
+
     &:hover {
-      background: rgba(0, 64, 255, .08);
+      .el-radio__inner {
+        border-color: $blue;
+      }
     }
   }
 
   .el-radio__input,
   .el-checkbox__input {
     line-height: 0; // 纵向居中 hack
+  }
+
+  .el-radio__label {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
