--- a/src/radio.scss
+++ b/src/radio.scss
@@ -1,6 +1,6 @@
 .el-radio {
   margin-right: 24px;
-  line-height: 24px;
+  line-height: 16px;
   font-weight: 400;
   color: #333;
 }
@@ -19,6 +19,10 @@
     width: 8px;
     height: 8px;
     background: $blue;
+  }
+
+  &:hover {
+    border-color: $blue;
   }
 }
 
