--- a/src/tag.scss
+++ b/src/tag.scss
@@ -1,7 +1,7 @@
 .el-tag {
   margin-bottom: 8px;
   padding: 0 8px;
-  background: rgba(0, 64, 255, .04);
+  background: #E6F0FF;
   border-color: #DDD;
   color: #333;
   font-size: 12px;
@@ -76,7 +76,7 @@
   margin-bottom: 4px;
   padding: 0 4px;
   height: 18px;
-  line-height: 1.5;
+  line-height: 18px;
   background: #E6F0FF;
   border-radius: 2px;
   border: 0;
