--- a/src/index.scss
+++ b/src/index.scss
@@ -30,3 +30,4 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 @import "./popconfirm.scss";
 @import "./drawer.scss";
 @import "./tag.scss";
+@import "./messagebox.scss";
