--- a/src/radio.scss
+++ b/src/radio.scss
@@ -22,7 +22,7 @@
   }
 
   &:hover {
-    border-color: $blue;
+    border-color: $hover;
   }
 }
 
@@ -33,6 +33,14 @@
 .el-radio__input.is-checked .el-radio__inner {
   border-color: $blue;
   background-color: transparent;
+
+  &:hover {
+    border-color: $hover;
+
+    &:after {
+      background-color: $hover;
+    }
+  }
 }
 
 .el-radio-button__inner {
@@ -62,4 +70,21 @@
 
 .el-radio-group.option-group--block {
   display: block;
+}
+
+
+.el-radio__input.is-disabled {
+  .el-radio__inner {
+    border-color: $disabled;
+    background-color: #EEE;
+  }
+
+  &.is-checked .el-radio__inner {
+    border-color: $disabled;
+    background-color: #EEE;
+
+    &:after {
+      background-color: $disabled;
+    }
+  }
 }
