--- a/src/popconfirm.scss
+++ b/src/popconfirm.scss
@@ -5,6 +5,13 @@
 .el-popconfirm__main {
   margin-bottom: 16px;
   line-height: 24px;
-  font-weight: 600;
   color: #333;
+}
+
+.el-popconfirm__action {
+  .el-button {
+    padding: 0 11px;
+    height: 32px;
+    line-height: 30px;
+  }
 }
