--- a/src/collapse.scss
+++ b/src/collapse.scss
@@ -11,12 +11,12 @@
   .el-collapse-item__arrow {
     font-size: 24px;
     line-height: 1;
-    font-family: "sd-icon" !important;
+    font-family: "sop-icon" !important;
   }
 
   .el-icon-arrow-right {
     &:before {
-      content: '\e601';
+      content: '\e608';
     }
 
     &.is-active {
@@ -27,13 +27,15 @@
 
 .el-collapse-item__header {
   // border: 0
-  font-weight: 400;
-  font-size: 14px;
+  height: 32px;
+  line-height: 32px;
+  font-weight: 600;
+  font-size: 12px;
   color: #333;
 }
 
 .el-collapse-item__content {
   padding-top: 16px;
-  padding-bottom: 40px;
-  font-size: 14px;
+  padding-bottom: 16px;
+  font-size: 12px;
 }
