--- a/src/radio.scss
+++ b/src/radio.scss
@@ -1,3 +1,5 @@
+$RadioButtonBorderColor: #DDD;
+
 .el-radio {
   margin-right: 24px;
   line-height: 16px;
@@ -49,7 +51,7 @@
   font-size: 12px;
   font-weight: 400;
   color: #333;
-  border: 1px solid #DDD;
+  border: 1px solid $RadioButtonBorderColor;
   border-left: 0;
   transition: none;
 
@@ -58,14 +60,22 @@
   }
 }
 
+// checked
 .el-radio-button__orig-radio:checked + .el-radio-button__inner {
   background: $blue;
   border-color: $blue;
   box-shadow: none;
 }
 
+// checked && disabled
+.el-radio-button__orig-radio:disabled + .el-radio-button__inner,
+.el-radio-button__orig-radio:disabled:checked + .el-radio-button__inner {
+  border-color: $RadioButtonBorderColor;
+}
+
+// first
 .el-radio-button:first-child .el-radio-button__inner {
-  border-left: 1px solid #DDD;
+  border-left: 1px solid $RadioButtonBorderColor;
 }
 
 .el-radio-group.option-group--block {
